Added hover button

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,12 @@
     <div class="container-fluid text-center">
       <p id="excuse">My dog ate my homework.</p>
       <!-- ID and onload function -->
-      <button type="button" onclick="onload()" id="button">
+      <button
+        type="button"
+        class="btn-lg btn-outline-secondary"
+        onclick="onload()"
+        id="button"
+      >
         Generate New Excuse
       </button>
     </div>
